--- a/src/assets/style/_variable.scss
+++ b/src/assets/style/_variable.scss
@@ -17,7 +17,7 @@
     --otonary-colortext: #000000;
     --nonary-colortext: #000000E6;
 
-    // boder colors: 7
+    // border colors: 7
     --primary-colorborder: #FFFFFF;
     --secondary-colorborder: #EFF1FE;
     --tertiary-colorborder: #377DFF;
@@ -25,5 +25,8 @@
     --quinary-colorborder: #0000000D;
     --senary-colorborder: #00000014;
     --septenary-colorborder: #1E161E;
+
+    // container
+    
 
 }
