--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -3,4 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
 @import './typography';
 
+.container{
+    max-width: 1000px !important;
+}
 
