--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -6,3 +6,14 @@
     max-width: 1000px !important;
 }
 
+.btn-primary{
+    background-color: var(--tertiary-color);
+
+}
+
+.btn-primary:hover{
+    background-color: var(--quaterny-color);
+    color: var(--primary-colortext);
+
+}
+
